fixed padding on small devices

--- a/css/about.css
+++ b/css/about.css
@@ -45,3 +45,14 @@
     bottom: 0;
     left: 0;
   }  
+
+  .no-padding-left {
+    padding-left: 0%!important;
+  }
+
+  
+@media (max-width: 768px) {
+    .general-about, .general-resume {
+        padding-left: 8%;
+    }
+}
